--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -2,7 +2,7 @@
   padding: 28px 20px 20px;
 
   @media (min-width: @tablet) {
-    padding: 36px 50px 30px;
+    padding: 34px 50px 30px;
   }
 }
 
@@ -49,7 +49,7 @@
   margin: 0 0 28px 10px;
 
   @media (min-width: @tablet) {
-    margin: 0;
+    margin: 3px 0 0 5px;
   }
 }
 
