--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -7,7 +7,7 @@
     #5496bd;
 
   @media (min-resolution: 2dppx) {
-    background: url("../img/intro/intro-triangle-1.svg") bottom no-repeat,
+    background: url("../img/intro/intro-triangle-1.svg") center 100.1% no-repeat,
       url("../img/intro/intro-background@2x.jpg") bottom/auto 100% no-repeat,
       #5496bd;
   }
