--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -3,7 +3,7 @@
   padding: 40px 20px 49px;
 
   @media (min-width: @tablet) {
-    padding: 61px 0 58px;
+    padding: 58px 0 60px;
   }
 
   @media (min-width: @desktop) {
@@ -17,6 +17,8 @@
 
   @media (min-width: @tablet) {
     margin-top: 40px;
+    margin-right: -5px;
+    margin-left: -5px;
   }
 
   @media (min-width: @desktop) {
