--- a/source/less/blocks/text-block.less
+++ b/source/less/blocks/text-block.less
@@ -50,7 +50,7 @@
     margin-bottom: 35px;
 
     @media (min-width: @tablet) {
-      margin-bottom: 28px;
+      margin-bottom: 30px;
     }
   }
 
@@ -58,6 +58,10 @@
     @media (max-width: (@tablet - 1px)) {
       margin-bottom: 22px;
       font-size: 21px;
+    }
+
+    @media (min-width: @tablet) {
+      margin-bottom: 32px;
     }
   }
 
